--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     {% include navigation.html %}
+    <div class="content">
     {{ content }}
+    </div>
   </body>
 </html>
