--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,50 @@
+// body {
+//   margin-right: 5%;
+//   margin-left: 5%;
+// }
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #222;
+}
+
+nav li {
+  float: left;
+}
+
+nav li a {
+  display: block;
+  color :  #d9d9d9;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav li a:hover {
+  color: white;
+}
+
 .current {
-    color: green;
-  }
+  background-color: #C02F1D;
+}
+
+#greyBloc {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #cccccc;
+  width: 40%;
+  min-width: 200px;
+  height: 300px;
+  overflow: hidden;
+}
+
+img {
+  max-width: 90%;
+  max-height: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
