--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,6 +1,6 @@
 {% assign img = include.img %}
 <picture>
-    <source type="image/webp" srcset="../assets/images/{{page.slug}}/{{img}}.webp" >
+    <source type="image/webp" srcset="../assets/images/{{page.slug}}/{{img}}.svg" >
     <img src="../assets/images/{{page.slug}}/{{img}}.png" alt="Logo" />
   </picture>
 
