--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,12 +3,18 @@
 //   margin-left: 5%;
 // }
 
+.content{
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #222;
+  border-radius: 10px;
 }
 
 nav li {
