--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,5 +6,5 @@
   </ul>
   </nav>
   <div id="greyBloc">
-    {% include logo.html img="RedChainLab-color"%}
+    {% include logo.html img="RedChainLab-color" alt="logo" %}
   </div>
