--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,11 +1,12 @@
-// body {
-//   margin-right: 5%;
-//   margin-left: 5%;
-// }
+body {
+  font :  18px/1.4 serif;
+}
+
+
 
 .content{
-  margin-right: 15%;
-  margin-left: 15%;
+  margin-right: 20%;
+  margin-left: 20%;
 }
 
 nav ul {
@@ -40,14 +41,32 @@ nav li a:hover {
 #greyBloc {
   margin-left: auto;
   margin-right: auto;
-  background-color: #cccccc;
-  width: 40%;
+  background-color: #669999; // cccccc
+  width: 60%;
   min-width: 200px;
   height: 300px;
+  max-height: 400px;
   overflow: hidden;
 }
 
-img {
+
+
+.NewsImage {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  min-width: 200px;
+  // max-height: 400px;
+  overflow: hidden;
+}
+
+.NewsImage img{
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
+
+#greyBloc img {
   max-width: 90%;
   max-height: 90%;
   display: block;
