--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -41,7 +41,7 @@ nav li a:hover {
 #greyBloc {
   margin-left: auto;
   margin-right: auto;
-  background-color: #669999; // cccccc
+  //background-color: #FFFFFF; // cccccc
   width: 60%;
   min-width: 200px;
   height: 200px;
@@ -82,7 +82,7 @@ nav li a:hover {
   width:100%;
   // background-color:#a6a6a6;
   background:linear-gradient(#a6a6a6, #cccccc);
-  font-family: cursive, sans-serif;
+  font-family: Calibri, sans-serif;//cursive, sans-serif;
 }
 
 
