--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,8 +1,12 @@
 body {
   font :  18px/1.4 serif;
+  font-family: Calibri, sans-serif;//cursive, sans-serif;
 }
 
-
+a {
+  color: #222;
+  font-style: bold;
+}
 
 .content{
   margin-right: 20%;
@@ -70,6 +74,7 @@ nav li a:hover {
   max-width: 90%;
   max-height: 90%;
   display: block;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -78,7 +83,7 @@ nav li a:hover {
 .header{
   line-height: 50px; 
   border-radius: 10px;
-  padding-left: 3px;
+  padding-left: 20px;
   width:100%;
   // background-color:#a6a6a6;
   background:linear-gradient(#a6a6a6, #cccccc);
@@ -90,12 +95,12 @@ nav li a:hover {
   float : left;
 }
 
-.reponsable {
+.dddd {
   float : left;
 }
 
 
-.doctorant{
+.member{
   display: inline-block;
   text-align: center;
   padding: 20px 20px;
