--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,9 +8,17 @@ a {
   font-style: bold;
 }
 
+.img-rounded {
+  border-radius: 6px;
+}
+
+.pull-right {
+  float: right !important;
+}
+
 .content{
-  margin-right: 20%;
-  margin-left: 20%;
+  margin-right: 10%;
+  margin-left: 10%;
 }
 
 nav ul {
