--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,7 +45,7 @@ nav li {
 
 nav li a {
   display: block;
-  color :  #d9d9d9;
+  color :  #ffffff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
