--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -3,7 +3,7 @@ layout: sub
 ---
 <div>
     <div>
-        <h2>{% if page.url_web %}<a href="{{ page.url_web }}">{% endif %}{{ page.civ_title }} {{ page.first_name }} {{ page.name }}</a></h2>
+        <h2>{% if page.url_web %}<a href="{{ page.url_web }}">{% endif %}{{ page.civ_title }} {{ page.first_name }} {{ page.name }}{% if page.post_title %} {{ page.post_title }}{% endif%}</a></h2>
     </div>
     <div>
         <img class="img-rounded pull-right" width=125em src="../assets/images/members/{%if page.img%}{{page.title | downcase}}{% else %}missing{%endif%}.jpg">
