--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -96,6 +96,11 @@ nav li a:hover {
   margin-right: auto;
 }
 
+.cropper {
+  width: 125em; /* or whatever is required */
+  text-align: center; /* ensures the image is always in the h-middle */
+  overflow: hidden; /* hide the cropped portion */
+}
 
 .header{
   line-height: 50px; 
