--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta property='og:title' content='RedChainLab'/>
-    <meta name="image" property='og:image' content='/assets/images/RedChainLab-color.png'/>
+    <meta name="image" property="og:image" content="https://redchainlab.github.io/assets/images/RedChainLab-color.png">
     <meta property='og:description' content='The RedChain-Lab joint laboratory project aims at bringing together the research and innovation forces of the DRIM team of LIRIS laboratory and the company iExec Blockchain Tech in order to develop protocols and operational blocks to set up a decentralized cloud infrastructure that offers scalability, resilience, trust and confidentiality properties.'/>
     <meta property='og:url' content='https://redchainlab.github.io/'/>
   </head>
