--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -166,14 +166,14 @@ tr.day td {
 }
 
 tr.break {
-  background-color: #f7d9d5;
+  background-color: #ddd;
   border-bottom: 2px solid #222;
   border-top: 2px solid #222;
 }
 
 tr.break.short td {
   padding: 4px 15px;
-  background-color: #efefef;
+  background-color: #ddd;
 }
 
 tr.break td:not(:first-child) {
